# chopper

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
doc/: README.md  architecture.md  bashcomp-design.md  broker-setup.md  cli-reference.md  config-reference.md  decision-log.md  examples.md  faq.md  glossary.md  migration.md  operational-spec.md  project-status.md  quick-reference.md  release-checklist.md  rhai-facade-reference.md  start-here.md  testing.md  troubleshooting.md  tui-reference.md
doc/templates/: README.md  bashcomp-alias.toml  bashcomp-custom.bash  bashcomp-rhai.rhai  basic-alias.toml  journal-alias.toml  reconcile-alias.toml  reconcile-script.rhai  rhai-facade-demo.rhai
scripts/: install-journal-broker.sh  package-release.sh  plbump.sh
src/: alias_admin.rs  alias_admin_parse.rs  alias_admin_validation.rs  alias_doc.rs  alias_paths.rs  alias_validation.rs  arg_validation.rs  bashcomp.bash  broker_main.rs  cache.rs  chopper_exe.rs  completion.rs  config_diagnostics.rs  env_util.rs  env_validation.rs  exe_runtime.rs  exec_resolution.rs  executor.rs  journal_broker_client.rs  journal_validation.rs  lib.rs  main.rs  manifest.rs  parser.rs  path_mutation.rs  path_mutation_validation.rs  path_validation.rs  reconcile.rs  rhai_api_catalog.rs  rhai_engine.rs  rhai_facade_validation.rs  rhai_wiring.rs  runner_resolution.rs  string_validation.rs  test_support.rs  tui.rs  tui_nvim.rs  wrapper_sync.rs
src/broker/: dbus_interface.rs  mod.rs  policy.rs  systemd.rs
src/rhai_facade/: fs.rs  http.rs  (+5 more)
tests/: e2e.rs
