[package]
name = "chopper"
version = "0.1.0"
edition = "2021"
description = "Meta-wrapper with Rhai-powered configuration"

[dependencies]
rhai = { version = "1", features = ["serde", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
directories = "6"
bincode = "1"
which = "7"
shell-words = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
