[package]
name = "chopper"
version = "0.3.0"
edition = "2021"
description = "Meta-wrapper with Rhai-powered configuration"

[[bin]]
name = "chopper"
path = "src/main.rs"

[[bin]]
name = "chopper-journal-broker"
path = "src/broker_main.rs"

[dependencies]
rhai = { version = "1", features = ["serde", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
directories = "6"
bincode = "1"
which = "7"
shell-words = "1"
toml = "1.0.1"
cap-std = "4.0.2"
duct = "1.1.1"
fs-err = "3.3.0"
wait-timeout = "0.2.1"
ureq = "3.2.0"
quick-xml = "0.39.1"
http = "1.4.0"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
zbus = { version = "5", features = ["blocking"] }
nix = { version = "0.29", features = ["user"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[dev-dependencies]
tempfile = "3.25.0"
